--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,15 @@
+*,
+h1,
+h2,
+h3,
+h4,
+p,
+code,
+small,
+strong,
 body {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
